230625 using messageSource & log4j2

--- a/demo/src/main/resources/templates/BD0010/BD0010.html
+++ b/demo/src/main/resources/templates/BD0010/BD0010.html
@@ -6,6 +6,9 @@
         <title>Board</title>
     </head>
     <div layout:fragment="content">
+        <th:block th:each="msg : ${msgs}">
+            <p th:text="${msg}"></p>
+        </th:block>
         <table style="border:solid 1px black;">
             <thead>
                 <tr>
